k8s/network/traefik/ingress/ingress-traefik-dashboard.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-traefik-dashboard
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.cucumbernetes.loc`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - kind: Service
          name: traefik
          port: 80
